# linked-list-c

./: .gitignore  CMakeLists.txt  README.md  main.c
cmake/: linked-list-cConfig.cmake.in
include/: ll.h  main.h
src/: ll.c  main.c  mud.c
test/: CMakeLists.txt  test.cpp
